--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1281,4 +1281,4 @@ enable_sasi_indexes: true
 
 # Enables the used of 'ALTER ... DROP COMPACT STORAGE' statements on this node.
 # 'ALTER ... DROP COMPACT STORAGE' is considered experimental and is not recommended for production use.
-enable_drop_compact_storage: true
+enable_drop_compact_storage: false
